--- a/sidebar/.prettierrc
+++ b/sidebar/.prettierrc
@@ -2,6 +2,6 @@
   "trailingComma": "es5",
   "semi": true,
   "singleAttributePerLine": true,
-  "plugins": "prettier-plugin-tailwindcss" ,
+  "plugins": ["prettier-plugin-tailwindcss" ],
   "pluginSearchDirs": false
 }
